--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://https://www.youtube.com/channel/UC_YAt_F9qmc7Oc9VxyF2flA" />
+    <meta http-equiv="refresh" content="0; url=https://https://https://www.youtube.com/@NikkuPlayz10" />
   </head>
   <body>
   </body>
