--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/NikkuPlay/main/media/anime-hot.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/NikkuPlay/main/media/gif.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/NikkuPlay/main/media/Bahut tez ho rahe ho salo _ clip _ memes template.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/NikkuPlay/main/media/lol.mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
